// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with load more 1`] = `
<ForwardRef(forwardRef)
  className="Queue-root"
  size="double"
>
  <TransitionGroup
    appear={false}
    component={null}
    enter={false}
    exit={true}
  />
  <ForwardRef(forwardRef)
    justifyContent="center"
  >
    <withContext(WithInView)
      disableLoadMore={false}
      onLoadMore={[Function]}
    />
  </ForwardRef(forwardRef)>
  <UserHistoryDrawer
    onClose={[Function]}
    open={false}
    userID=""
  />
</ForwardRef(forwardRef)>
`;

exports[`renders correctly without load more 1`] = `
<ForwardRef(forwardRef)
  className="Queue-root"
  size="double"
>
  <TransitionGroup
    appear={false}
    component={null}
    enter={false}
    exit={true}
  />
  <UserHistoryDrawer
    onClose={[Function]}
    open={false}
    userID=""
  />
</ForwardRef(forwardRef)>
`;
